# NLP_AutoML

./: .gitignore  .python-version  Makefile  Readme.md  Readme_pypi.md  pyproject.toml  setup.cfg  setup.py
examples/: intent_predictition.py
nlp_automl/: __init__.py  auto_ml_pipeline.py  base.py  datatypes.py
nlp_automl/method/: base.py  boosting.py  log_reg.py  rand_forest.py
nlp_automl/preprocess/: base.py  basic.py  lemmatizer.py  stemmer.py
nlp_automl/vectorizer/: base.py  count.py  fast_text.py  tf_idf.py
tests/: conftest.py  pipeline_test.py  test_something.py
