[tool.poetry]
name = "nlp_automl"
version = "0.2"
description = "AutoML library for solving only text -> label task'"
authors = ["salaxieb <salaxieb.ildar@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
pandas = "^1.3.4"
scikit-learn = "^1.0.1"
optuna = "^2.10.0"
nltk = "^3.6.5"
pymystem3 = "^0.2.0"
fasttext = "^0.9.2"

[tool.poetry.dev-dependencies]
tox = "^3.24.4"
mypy = "^0.910"
pylint = "^2.11.1"
black = "^21.10b0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
